--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,7 @@
 
 .App-logo {
   /* animation: App-logo-spin infinite 20s linear; */
-  width: 120px;
-  border-radius: 50%;
+  width: 20%;
 }
 
 .App-header {
