--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,12 @@
 
 .App-logo {
   /* animation: App-logo-spin infinite 20s linear; */
-  width: 20%;
+  width: 90px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 200px;
   padding: 20px;
   color: white;
 }
@@ -19,7 +19,7 @@
 }
 
 .App-intro {
-  font-size: large;
+  /* font-size: large; */
 }
 
 /* @keyframes App-logo-spin {
